# testing-tutorials

./: .behaverc  .gitignore  pyproject.toml
decoupled/core/domain/car_rental/: dto.py  model.py
decoupled/core/domain/car_rental/exceptions/: expired_license.py
decoupled/core/domain/car_rental/interfaces/repositories/: command.py
decoupled/core/domain/common/interfaces/: transaction.py  transaction_manager.py
decoupled/core/domain/common/interfaces/services/: dmv_interface.py
decoupled/core/use_case/car_rental/rent_a_car/: handler.py
decoupled/core/use_case/car_rental/rent_a_car/interfaces/: command.py
decoupled/driven/repositories/in_memory/car_rental/: entity.py
decoupled/driven/repositories/in_memory/car_rental/repositories/: command.py  query.py
decoupled/driven/repositories/in_memory/common/: entity.py  transaction.py  unit_of_work.py  unit_of_work_memento.py
decoupled/driven/repositories/in_memory/common/interfaces/: unit_of_work.py  unit_of_work_originator.py
decoupled/driven/repositories/in_memory/common/transactions/: __init__.py  manager.py  proxy.py
decoupled/driven/services/: dmv.py
tests/decoupled/consumer_driven/: fixtures.py
tests/decoupled/consumer_driven/dmv/: test_get_driver_license.py
tests/decoupled/unit/car_rental/fixtures/: repositories.py  services.py
tests/decoupled/unit/car_rental/rent_a_car/: test_rent_a_car.py
tests/decoupled/unit/car_rental/rent_a_car/utils/command_bus/: command.py
tests/decoupled/unit/car_rental/rent_a_car/utils/stubs/services/dmv/: base.py  (+1 more)
tests/decoupled/unit/fixtures/: repositories.py
